@@ -2,23 +2,74 @@
 
 usage(){
     U1="usage: $0 [-setcookie <cookie>] [-nocookie] "
-    U2="[-nettick <tick>] [-nospawn] nodename"
+    U2="[-nettick <tick>] [-win] [-vsn <OTP version>] nodename"
     echo $U1 $U2
     exit
 }
 
+if [ ${0:0:1} == "/" ];then
+    SPATH=$0
+elif [ -x $PWD/$0 ];then
+    SPATH=$PWD/$0
+else
+    SPATH=`which $0`
+fi
+
+n=4
+while [ 0 -lt "$n" ]; do 
+    SPATH=`dirname $SPATH` ; let "n--"
+done
+
+detach="-detached"
+ERL=erl
+
 while [ -n "$1" ] 
   do
-  ARGS="$ARGS $LAST"
-  LAST=$1
+  case $1 in
+      "-help"|"-h"|"-?")
+	  usage
+	  ;;
+      "-win")
+	  WIN="xterm -sb -sl 9999 -bg gold -fg black -e"
+	  detach=""
+	  ;;
+      "-vsn"|"-version")
+	  vsn=$2
+	  shift
+	  ERLP=`which erl`
+	  ERLP=`dirname $ERLP` ; ERLP=`dirname $ERLP` ; ERLP=`dirname $ERLP`
+	  ERL=`echo $ERLP/${vsn}*/bin/erl`
+	  if [ ! -x "$ERL" ]; then usage; fi
+	  ;;
+      "-nettick"|"-tick")
+	  nettick="-kernel net_ticktime $2"
+	  shift 
+	  ;;
+      "-cookie"|"-setcookie")
+	  cookie="-setcookie $2"
+	  shift
+	  ;;
+      "-nocookie")
+	  cookie=""
+	  ;;
+      *)
+	  if [ $# -eq 1 ]; then
+	      TARG=$1
+	  else
+	      usage
+	  fi
+	  ;;
+  esac
   shift
 done
-echo args $ARGS
-echo last $LAST
-if [ -z "$LAST" ]; then usage; fi
+if [ -z "$TARG" ]; then usage; fi
 
-Erl $ARGS \
--pa $JUNGERL/lib/prf/examples/gperf \
--pa $JUNGERL/lib/prf/ebin \
--pa $JUNGERL/lib/gtkNode/ebin \
--s gperf start $LAST
+name="gperf_"$$
+FLAGS="$detach -boot start_sasl -sasl errlog_type error +A16"
+DISTR="-hidden -sname $name $cookie $nettick"
+
+$WIN $ERL $FLAGS $DISTR \
+-pa $SPATH/prf/examples/gperf \
+-pa $SPATH/prf/ebin \
+-pa $SPATH/gtkNode/ebin \
+-s gperf start $TARG
